--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -22,8 +22,9 @@
     <PackageReference Include="AWSSDK.S3" Version="3.3.24" />
     <PackageReference Include="CountLib" Version="1.0.2" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.3" />
     <PackageReference Include="Miki.Anilist" Version="0.5.1" />
-    <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.1.1" />
+    <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.1.2" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.0" />
     <PackageReference Include="Miki.Discord.Gateway.Distributed" Version="1.2.8" />
