Fix scoping for models

--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -46,9 +46,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Miki.Bot.Models\Miki.Bot.Models.csproj" />
     <ProjectReference Include="..\..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
+    <ProjectReference Include="..\Miki.Bot.Models\Miki.Bot.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
