--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -48,6 +48,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Miki.Discord\Miki.Discord.Gateway.Centralized\Miki.Discord.Gateway.Centralized.csproj" />
+    <ProjectReference Include="..\..\Miki.Discord\Miki.Discord.Gateway.Distributed\Miki.Discord.Gateway.Distributed.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
     <ProjectReference Include="..\Miki.Bot.Models\Miki.Bot.Models.csproj" />
     <ProjectReference Include="..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
