--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -24,11 +24,11 @@
     <PackageReference Include="CountLib" Version="1.0.2" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
-    <PackageReference Include="Miki.Anilist" Version="0.5.1" />
+    <PackageReference Include="Miki.Anilist" Version="0.6.0-beta2" />
     <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.1.2" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.0" />
-    <PackageReference Include="Miki.Discord.Gateway.Distributed" Version="1.3.0" />
+    <PackageReference Include="Miki.Discord.Gateway.Distributed" Version="1.3.1" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
     <PackageReference Include="Miki.Logging" Version="1.1.2" />
     <PackageReference Include="Miki.Patreon" Version="0.1.0" />
@@ -47,8 +47,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Miki.Discord\Miki.Discord.Gateway.Centralized\Miki.Discord.Gateway.Centralized.csproj" />
-    <ProjectReference Include="..\..\Miki.Discord\Miki.Discord.Gateway.Distributed\Miki.Discord.Gateway.Distributed.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
     <ProjectReference Include="..\Miki.Bot.Models\Miki.Bot.Models.csproj" />
     <ProjectReference Include="..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
