--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.0" />
     <PackageReference Include="Miki.Discord.Caching" Version="2.4.4" />
+    <PackageReference Include="Miki.Discord.Gateway.Centralized" Version="0.1.0-beta3" />
     <PackageReference Include="Miki.Discord.Gateway.Distributed" Version="1.3.1" />
     <PackageReference Include="Miki.Discord.Rest" Version="2.6.1" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
