--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Imgur.API" Version="4.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
     <PackageReference Include="Miki.Anilist" Version="0.6.0-beta2" />
+    <PackageReference Include="Miki.BunnyCDN" Version="0.1.0-beta1" />
     <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.2.0" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.0" />
