--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -27,7 +27,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
     <PackageReference Include="Miki.Anilist" Version="0.6.0-beta2" />
     <PackageReference Include="Miki.BunnyCDN" Version="0.1.0-beta2" />
-    <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.1.2" />
+    <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.2.0" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.0" />
     <PackageReference Include="Miki.Discord.Caching" Version="2.4.4" />
@@ -35,7 +35,7 @@
     <PackageReference Include="Miki.Discord.Gateway.Distributed" Version="1.3.2" />
     <PackageReference Include="Miki.Discord.Rest" Version="2.6.1" />
     <PackageReference Include="Miki.Dsl" Version="1.1.0" />
-    <PackageReference Include="Miki.Serialization.Protobuf" Version="1.0.4" />
+    <PackageReference Include="Miki.Serialization.Protobuf" Version="1.0.5-alpha1" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Npgsql" Version="4.0.4" />
