--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -31,11 +31,11 @@
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.0" />
     <PackageReference Include="Miki.Discord.Caching" Version="2.4.4" />
-    <PackageReference Include="Miki.Discord.Gateway.Centralized" Version="0.1.0-beta3" />
-    <PackageReference Include="Miki.Discord.Gateway.Distributed" Version="1.3.2" />
-    <PackageReference Include="Miki.Discord.Rest" Version="2.6.1" />
+    <PackageReference Include="Miki.Discord.Gateway.Distributed" Version="1.3.4" />
+    <PackageReference Include="Miki.Discord.Rest" Version="2.6.2" />
     <PackageReference Include="Miki.Dsl" Version="1.1.0" />
     <PackageReference Include="Miki.Serialization.Protobuf" Version="1.0.4" />
+    <PackageReference Include="MiScript" Version="0.1.0" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Npgsql" Version="4.0.4" />
@@ -45,11 +45,9 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\MiScript\src\MiScript.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
     <ProjectReference Include="..\Miki.Bot.Models\Miki.Bot.Models.csproj" />
     <ProjectReference Include="..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
-    <ProjectReference Include="..\Miki.UrbanDictionary\Miki.UrbanDictionary.csproj" />
   </ItemGroup>
 
   <ItemGroup>
