--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\..\MiScript\src\MiScript\MiScript.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
     <ProjectReference Include="..\Miki.Bot.Models\Miki.Bot.Models.csproj" />
     <ProjectReference Include="..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
