--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -25,11 +25,12 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.3.31.5" />
     <PackageReference Include="CountLib" Version="1.0.2" />
+    <PackageReference Include="DogStatsD-CSharp-Client" Version="3.3.0" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.4" />
     <PackageReference Include="Miki.Anilist" Version="0.6.0-beta2" />
     <PackageReference Include="Miki.BunnyCDN" Version="0.1.0-beta2" />
-    <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.2.0" />
+    <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.2.1" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.0" />
     <PackageReference Include="Miki.Discord.Caching" Version="2.4.4" />
@@ -41,16 +42,20 @@
     <PackageReference Include="Miki.UrbanDictionary" Version="0.1.0" />
     <PackageReference Include="MiScript" Version="0.1.2" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="Npgsql" Version="4.0.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Npgsql" Version="4.0.6" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
     <PackageReference Include="SharpRaven" Version="2.4.0" />
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\..\Miki.Framework\Miki.Framework.Commands.Localization\Miki.Framework.Commands.Localization.csproj" />
+    <ProjectReference Include="..\..\Miki.Framework\Miki.Framework.Commands.Prefixes\Miki.Framework.Commands.Prefixes.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
     <ProjectReference Include="..\Miki.Bot.Models\Miki.Bot.Models.csproj" />
+    <ProjectReference Include="..\Miki.Framework\Miki.Framework.Arguments\Miki.Framework.Arguments.csproj" />
+    <ProjectReference Include="..\Miki.Framework\Miki.Framework.Commands\Miki.Framework.Commands\Miki.Framework.Commands.csproj" />
     <ProjectReference Include="..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
   </ItemGroup>
 
