--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -50,7 +50,9 @@
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\..\Miki.Framework\Miki.Framework.Commands.Filters\Miki.Framework.Commands.Filters.csproj" />
     <ProjectReference Include="..\..\Miki.Framework\Miki.Framework.Commands.Localization\Miki.Framework.Commands.Localization.csproj" />
+    <ProjectReference Include="..\..\Miki.Framework\Miki.Framework.Commands.Permissions\Miki.Framework.Commands.Permissions.csproj" />
     <ProjectReference Include="..\..\Miki.Framework\Miki.Framework.Commands.Prefixes\Miki.Framework.Commands.Prefixes.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
     <ProjectReference Include="..\Miki.Bot.Models\Miki.Bot.Models.csproj" />
