--- a/src/Miki/Miki.csproj
+++ b/src/Miki/Miki.csproj
@@ -30,6 +30,8 @@
     <PackageReference Include="Miki.Anilist" Version="0.6.0" />
     <PackageReference Include="Miki.BunnyCDN" Version="0.1.0-beta2" />
     <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.3.0" />
+    <PackageReference Include="Miki.Configuration" Version="1.0.0" />
+    <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.1" />
     <PackageReference Include="Miki.Dsl" Version="1.2.0" />
     <PackageReference Include="Miki.Serialization.Protobuf" Version="1.0.4" />
     <PackageReference Include="Miki.UrbanDictionary" Version="0.1.0" />
