--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = submodules/Miki.Bot.Models
 	url = https://github.com/mikibot/Miki.Bot.Models
 [submodule "Miki.Framework"]
-	path = submodules/Miki.Framework
+	path = submodules/miki.framework
 	url = https://github.com/mikibot/Miki.Framework
 	branch = core-rewrite-
 [submodule "submodules/miki.discord"]
