Add: new achievements system

--- a/test/Miki.Tests/Miki.Tests.csproj
+++ b/test/Miki.Tests/Miki.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Modules\" />
+    <Folder Include="Modules\Gambling\" />
   </ItemGroup>
 
   <ItemGroup>
