--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+    - name: checkout submodules
+      run: git submodule update --init
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
