--- a/src/Miki/Miki.csproj
+++ b/src/Miki/Miki.csproj
@@ -39,7 +39,7 @@
     <PackageReference Include="MiScript" Version="0.1.2" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Npgsql" Version="4.1.0-preview2" />
+    <PackageReference Include="Npgsql" Version="4.1.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
     <PackageReference Include="SharpRaven" Version="2.4.0" />
   </ItemGroup>
@@ -55,8 +55,8 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
-    <Compile Update="Languages\ces.Designer.cs">
-      <DependentUpon>ces.resx</DependentUpon>
+    <Compile Update="Languages\cze.Designer.cs">
+      <DependentUpon>cze.resx</DependentUpon>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
@@ -186,8 +186,8 @@
       <LastGenOutput>bul.Designer.cs</LastGenOutput>
       <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Languages\ces.resx">
-      <LastGenOutput>ces.Designer.cs</LastGenOutput>
+    <EmbeddedResource Update="Languages\cze.resx">
+      <LastGenOutput>cze.Designer.cs</LastGenOutput>
       <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Languages\dan.resx">
@@ -299,5 +299,6 @@
     <ProjectReference Include="..\..\submodules\retsu\src\Retsu.Consumer\Retsu.Consumer.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
     <ProjectReference Include="..\..\submodules\miki.framework\Miki.Framework.Commands.Localization\Miki.Framework.Commands.Localization.csproj" />
+    <ProjectReference Include="..\Miki.Framework.Routines\Miki.Framework.Routines.csproj" />
   </ItemGroup>
 </Project>
