--- a/test/Miki.Tests/Miki.Tests.csproj
+++ b/test/Miki.Tests/Miki.Tests.csproj
@@ -9,8 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Moq" Version="4.12.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Miki.Cache.InMemory" Version="1.3.0" />
+    <PackageReference Include="Moq" Version="4.13.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
@@ -19,11 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Modules\Gambling\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\..\src\Miki\Miki.csproj" />
+    <ProjectReference Include="..\..\submodules\miki.bot.models\Miki.Bot.Models.csproj" />
+    <ProjectReference Include="..\..\submodules\miki.framework\Miki.Framework.Tests\Miki.Framework.Tests.csproj" />
   </ItemGroup>
 
 </Project>
