--- a/src/Miki/Miki.csproj
+++ b/src/Miki/Miki.csproj
@@ -34,12 +34,16 @@
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.1" />
     <PackageReference Include="Miki.Dsl" Version="1.2.0" />
+    <PackageReference Include="Miki.Framework" Version="2.0.0" />
+    <PackageReference Include="Miki.Framework.Arguments" Version="2.0.0" />
+    <PackageReference Include="Miki.Framework.Commands" Version="2.0.0" />
+    <PackageReference Include="Miki.Framework.Commands.Filters" Version="2.0.0" />
     <PackageReference Include="Miki.Serialization.Protobuf" Version="1.0.4" />
     <PackageReference Include="Miki.UrbanDictionary" Version="0.1.0" />
     <PackageReference Include="MiScript" Version="0.1.2" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Npgsql" Version="4.1.0" />
+    <PackageReference Include="Npgsql" Version="4.1.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
     <PackageReference Include="SharpRaven" Version="2.4.0" />
   </ItemGroup>
@@ -290,14 +294,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\submodules\miki.bot.models\Miki.Bot.Models.csproj" />
-    <ProjectReference Include="..\..\submodules\miki.discord\Miki.Discord.Gateway\Miki.Discord.Gateway.csproj" />
-    <ProjectReference Include="..\..\submodules\miki.framework\Miki.Framework.Commands.Filters\Miki.Framework.Commands.Filters.csproj" />
-    <ProjectReference Include="..\..\submodules\miki.framework\Miki.Framework.Commands.Prefixes\Miki.Framework.Commands.Prefixes.csproj" />
-    <ProjectReference Include="..\..\submodules\miki.framework\Miki.Framework.Commands.Scopes\Miki.Framework.Commands.Scopes.csproj" />
-    <ProjectReference Include="..\..\submodules\miki.framework\Miki.Framework.Commands\Miki.Framework.Commands.csproj" />
-    <ProjectReference Include="..\..\submodules\miki.framework\Miki.Framework.Routines\Miki.Framework.Routines.csproj" />
     <ProjectReference Include="..\..\submodules\retsu\src\Retsu.Consumer\Retsu.Consumer.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
-    <ProjectReference Include="..\..\submodules\miki.framework\Miki.Framework.Commands.Localization\Miki.Framework.Commands.Localization.csproj" />
   </ItemGroup>
 </Project>
