--- a/src/Miki/Miki.csproj
+++ b/src/Miki/Miki.csproj
@@ -25,7 +25,10 @@
     <PackageReference Include="DogStatsD-CSharp-Client" Version="3.3.0" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
 
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Miki.Anilist" Version="0.6.0" />
     <PackageReference Include="Miki.BunnyCDN" Version="0.1.0-beta2" />
     <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.3.0" />
@@ -41,8 +44,7 @@
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Npgsql" Version="4.1.2" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
-    <PackageReference Include="SharpRaven" Version="2.4.0" />
+    <PackageReference Include="Sentry" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
