--- a/src/Miki/Miki.csproj
+++ b/src/Miki/Miki.csproj
@@ -21,11 +21,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.3.31.5" />
-    <PackageReference Include="DogStatsD-CSharp-Client" Version="3.3.0" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.110.19" />
+    <PackageReference Include="DogStatsD-CSharp-Client" Version="4.0.0" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
 
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -35,16 +35,18 @@
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.1" />
     <PackageReference Include="Miki.Dsl" Version="1.2.0" />
+    <PackageReference Include="Miki.Framework" Version="2.0.2" />
     <PackageReference Include="Miki.Framework.Arguments" Version="2.0.0" />
     <PackageReference Include="Miki.Framework.Commands" Version="2.0.0" />
     <PackageReference Include="Miki.Framework.Commands.Filters" Version="2.0.0" />
     <PackageReference Include="Miki.Serialization.Protobuf" Version="1.0.4" />
-    <PackageReference Include="Miki.UrbanDictionary" Version="0.1.0" />
+    <PackageReference Include="Miki.UrbanDictionary" Version="0.2.0" />
     <PackageReference Include="MiScript" Version="0.1.2" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Npgsql" Version="4.1.2" />
-    <PackageReference Include="Sentry" Version="1.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Npgsql" Version="4.1.3" />
+    <PackageReference Include="Sentry" Version="2.0.1" />
+    <PackageReference Include="Veld.Osu" Version="0.1.2" />
   </ItemGroup>
 
   <ItemGroup>
