--- a/src/Miki/Miki.csproj
+++ b/src/Miki/Miki.csproj
@@ -8,6 +8,7 @@
 	  <Version>2019.2</Version>
 	  <AssemblyVersion>2019.2.0.0</AssemblyVersion>
 	  <LangVersion>8.0</LangVersion>
+	  <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'" />
@@ -25,27 +26,29 @@
     <PackageReference Include="DogStatsD-CSharp-Client" Version="4.0.1" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
 
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.1">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
     <PackageReference Include="Miki.Anilist" Version="0.6.0" />
     <PackageReference Include="Miki.BunnyCDN" Version="0.1.0-beta2" />
     <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.3.0" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.1" />
     <PackageReference Include="Miki.Dsl" Version="1.2.0" />
-    <PackageReference Include="Miki.Framework" Version="2.1.0" />
+    <PackageReference Include="Miki.Framework" Version="2.2.2" />
     <PackageReference Include="Miki.Framework.Arguments" Version="2.1.0" />
-    <PackageReference Include="Miki.Framework.Commands" Version="2.0.1" />
-    <PackageReference Include="Miki.Framework.Commands.Filters" Version="2.0.0" />
+    <PackageReference Include="Miki.Framework.Commands" Version="2.1.2" />
+    <PackageReference Include="Miki.Framework.Commands.Filters" Version="2.2.2" />
     <PackageReference Include="Miki.Serialization.Protobuf" Version="1.0.4" />
     <PackageReference Include="Miki.UrbanDictionary" Version="0.2.0" />
     <PackageReference Include="MiScript" Version="0.1.2" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Npgsql" Version="4.1.3" />
-    <PackageReference Include="Sentry" Version="2.0.3" />
+    <PackageReference Include="Npgsql" Version="4.1.3.1" />
+    <PackageReference Include="Sentry" Version="2.1.0" />
     <PackageReference Include="Veld.Osu" Version="0.1.4" />
   </ItemGroup>
 
