--- a/src/Miki/Miki.csproj
+++ b/src/Miki/Miki.csproj
@@ -33,7 +33,7 @@
 
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
     <PackageReference Include="Miki.Anilist" Version="0.6.0" />
-    <PackageReference Include="Miki.BunnyCDN" Version="0.1.0-beta2" />
+    <PackageReference Include="Miki.BunnyCDN" Version="0.1.0" />
     <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.3.0" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.1" />
