--- a/src/Miki/Miki.csproj
+++ b/src/Miki/Miki.csproj
@@ -45,6 +45,7 @@
     <PackageReference Include="Miki.Framework.Arguments" Version="2.1.0" />
     <PackageReference Include="Miki.Framework.Commands" Version="2.1.2" />
     <PackageReference Include="Miki.Framework.Commands.Filters" Version="2.2.2" />
+    <PackageReference Include="Miki.Functional" Version="0.1.0" />
     <PackageReference Include="Miki.Serialization.Protobuf" Version="1.0.4" />
     <PackageReference Include="Miki.UrbanDictionary" Version="0.2.0" />
     <PackageReference Include="MiScript" Version="0.1.2" />
