--- a/src/Miki/Miki.csproj
+++ b/src/Miki/Miki.csproj
@@ -34,8 +34,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
     <PackageReference Include="Miki.Anilist" Version="0.6.1" />
     <PackageReference Include="Miki.BunnyCDN" Version="0.1.0" />
-    <PackageReference Include="Miki.Cache.InMemory" Version="1.3.0" />
-    <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.3.0" />
+    <PackageReference Include="Miki.Cache.InMemory" Version="1.4.0" />
+    <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.4.2" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.1" />
     <PackageReference Include="Miki.Discord" Version="3.2.0" />
@@ -51,8 +51,10 @@
     <PackageReference Include="MiScript" Version="0.1.2" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Nice.Snowflake" Version="1.0.3" />
     <PackageReference Include="Npgsql" Version="4.1.3.1" />
-    <PackageReference Include="Sentry" Version="2.1.0" />
+    <PackageReference Include="Sentry" Version="2.1.1" />
+    <PackageReference Include="Splitio-net-core" Version="6.0.2" />
     <PackageReference Include="Veld.Osu" Version="0.1.4" />
   </ItemGroup>
 
@@ -174,6 +176,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="feature_flags.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="resources\backgrounds.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
