--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,8 @@ stages:
     - task: Docker@2
       displayName: Build an image
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/src/Miki/Dockerfile'
-        tags: |
-          $(tag)
+        containerRegistry: 'Github Docker'
+        command: 'build'
+        Dockerfile: '**/Dockerfile'
+        buildContext: './'
+        tags: '$(tag)'
