--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "submodules/miki.bot.models"]
 	path = submodules/miki.bot.models
 	url = https://github.com/mikibot/miki.bot.models
+[submodule "src/Miki/resources/locales"]
+	path = src/Miki/resources/locales
+	url = https://github.com/mikibot/bot-translations
